--- a/package.json
+++ b/package.json
@@ -1,34 +1,64 @@
 {
-  "name": "angular2-basic_version",
+  "name": "angular2-quickstart",
   "version": "1.0.0",
+  "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
+    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "docker-build": "docker build -t ng2-quickstart .",
+    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
+    "pree2e": "npm run webdriver:update",
+    "e2e": "tsc && concurrently \"http-server -s\" \"protractor protractor.config.js\" --kill-others --success first",
+    "lint": "tslint ./app/**/*.ts -t verbose",
     "lite": "lite-server",
-    "gulp": "gulp",
-    "start": "concurrent \"npm run gulp\" \"npm run lite\" "
+    "postinstall": "typings install",
+    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
+    "test-once": "tsc && karma start karma.conf.js --single-run",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings",
+    "webdriver:update": "webdriver-manager update"
   },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.14",
-    "systemjs": "0.19.25",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6"
+    "@angular/common":  "2.0.0-rc.6",
+    "@angular/compiler":  "2.0.0-rc.6",
+    "@angular/core":  "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http":  "2.0.0-rc.6",
+    "@angular/platform-browser":  "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.6",
+    "@angular/router":  "3.0.0-rc.2",
+    "@angular/upgrade":  "2.0.0-rc.6",
+
+    "systemjs": "0.19.27",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "^0.6.17",
+
+    "angular2-in-memory-web-api": "0.0.18",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.5",
-    "cssnano": "^3.4.0",
-    "concurrently": "^2.0.0",
-    "gulp": "^3.9.0",
-    "gulp-ext-replace": "^0.2.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-postcss": "^6.0.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.10.0",
-    "gulp-uglify": "^1.5.1",
-    "lite-server": "^2.1.0",
-    "postcss": "^5.0.13",
-    "postcss-scss": "^0.1.3",
-    "precss": "^1.3.0"
-  }
+    "concurrently": "^2.2.0",
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4",
+
+    "canonical-path": "0.0.2",
+    "http-server": "^0.9.0",
+    "tslint": "^3.7.4",
+    "lodash": "^4.11.1",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-cli": "^0.1.2",
+    "karma-htmlfile-reporter": "^0.2.2",
+    "karma-jasmine": "^0.3.8",
+    "protractor": "^3.3.0",
+    "rimraf": "^2.5.2"
+  },
+  "repository": {}
 }
